Fix UI dark mode specifity

--- a/source/content-script/overlay/indexDark.css
+++ b/source/content-script/overlay/indexDark.css
@@ -1,41 +1,41 @@
-.lindy-ui-icon {
+.lindy-ui-icon..lindy-ui-icon {
     color: #6b7280 !important;
 }
 
-.lindy-ui-icon:hover {
+.lindy-ui-icon.lindy-ui-icon:hover {
     color: #d1d5db !important;
     filter: none;
 }
 
-.lindy-tooltip:before {
+.lindy-tooltip.lindy-tooltip:before {
     background: #4b5563;
     color: #d1d5db;
     filter: none;
 }
-.lindy-tooltip:after {
+.lindy-tooltip.lindy-tooltip:after {
     border-left: 6px solid #4b5563;
 }
 
-.lindy-theme-popup {
+.lindy-theme-popup.lindy-theme-popup {
     background-color: #4b5563;
     color: #d1d5db;
     filter: none;
 }
-.lindy-theme-popup-row-spacer {
+.lindy-theme-popup-row-spacer.lindy-theme-popup-row-spacer {
     border-top: 2px solid #6b7280;
 }
-.lindy-plusminus > div:hover > svg {
+.lindy-plusminus.lindy-plusminus > div:hover > svg {
     color: #d1d5db !important;
 }
-.lindy-plusminus > div:hover {
+.lindy-plusminus.lindy-plusminus > div:hover {
     background-color: #6b7280;
 }
-.lindy-theme-popup:before {
+.lindy-theme-popup.lindy-theme-popup:before {
     border-left: 8px solid #4b5563;
 }
-.lindy-theme-button {
+.lindy-theme-button.lindy-theme-button {
     border: none;
 }
-.lindy-active-theme {
+.lindy-active-theme.lindy-active-theme {
     border: 2.5px solid #6b7280;
 }
