--- a/source/content-script/pageview/contentDark.css
+++ b/source/content-script/pageview/contentDark.css
@@ -1,20 +1,32 @@
-html.pageview {
+html.pageview.pageview {
     background-color: #000 !important;
 }
 
-.html.pageview > body {
+.html.pageview.pageview > body {
     filter: drop-shadow(0 10px 8px rgb(255 255 255 / 0.15))
         drop-shadow(0 4px 3px rgb(255 255 255 / 0.2));
 }
 
-.lindy-page-broken {
+.lindy-page-broken.lindy-page-broken {
     color: #d1d5db;
 }
 
 /* dark mode global tweaks */
 :root {
     color: var(--lindy-dark-theme-text-color);
+    scrollbar-color: var(--lindy-dark-theme-text-color) #000 !important; /* only firefox */
 }
+
+/* ::-webkit-scrollbar {
+    background-color: #000;
+}
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+::-webkit-scrollbar-thumb {
+    background-color: red;
+} */
+
 a {
     color: #3391ff;
 }
